<resources>
    <string name="app_name">AstroCoin</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="connect">Connect</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="recover">Recover</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="hello">Hello,</string>
    <string name="enter_password">Enter password</string>
    <string name="transfers">Transfers</string>
    <string name="orders">Orders</string>
    <string name="forgot_password">Forgot password</string>
    <string name="transfer">Transfer</string>
    <string name="personal_information">Personal information</string>
    <string name="notifications">Notifications</string>
    <string name="app_password">App password</string>
    <string name="help">Help</string>
    <string name="about_app">About App</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="recieve">Recieve</string>
    <string name="send">Send</string>
    <string name="_0_asc">0 ASC</string>
    <string name="wallet_address">wallet address</string>
    <string name="l">[</string>
    <string name="shop">Shop</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">confirm password</string>
    <string name="current_password">Current password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="enter_new_password_for_your_account">Enter new password for your account</string>
    <string name="student_ranks">Student Ranks</string>
    <string name="astrum_store">Astrum Store</string>
    <string name="change_password">Change password</string>
    <string name="your_password">Your password</string>
    <string name="service">Service</string>
    <string name="date_and_time">Date and time</string>
    <string name="receiver_s_name">Receiver\'s name</string>
    <string name="receiver_s_wallet">Receiver\'s wallet</string>
    <string name="comment">Comment</string>
    <string name="status">Status</string>
</resources>