<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/fon"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edilogemail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:ems="10"
        app:fontFamily="@font/fredoka_fonts"
        android:paddingStart="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        android:background="@drawable/loginedittext"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="40dp"
        app:layout_constraintHorizontal_bias="0.497"
        tools:ignore="Autofill,RtlSymmetry"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"/>
    <EditText
        android:id="@+id/edilogpassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:hint="@string/password"
        android:background="@drawable/loginedittext"
        android:ems="10"
        app:fontFamily="@font/fredoka_fonts"
        android:paddingStart="15dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edilogemail"
        app:layout_constraintStart_toStartOf="@+id/edilogemail"
        app:layout_constraintTop_toBottomOf="@+id/edilogemail"
        tools:ignore="Autofill,RtlSymmetry"/>

    <Button
        android:id="@+id/btnlogsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:background="@drawable/buttonsignin"
        app:fontFamily="@font/fredoka_fonts"
        app:layout_constraintTop_toTopOf="@+id/getBtnloginsain_up"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"/>
    <Button
        android:id="@+id/getBtnloginsain_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:fontFamily="@font/fredoka_fonts"
        android:textColor="@color/logintextcolor"
        android:background="@drawable/buttonsigunup"
        app:layout_constraintTop_toBottomOf="@+id/txtmalumot"
        android:layout_marginTop="56dp"
        app:layout_constraintStart_toStartOf="@+id/guideline13"/>
    <TextView
        android:id="@+id/txtmalumot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover"
        app:fontFamily="@font/fredoka_fonts"
        android:textColor="@color/logintextcolor"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/edilogpassword"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/edilogpassword"
        android:layout_marginStart="8dp"/>
    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_group_14"
        android:id="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/guideline15"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintHorizontal_bias="0.0"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toStartOf="@+id/guideline14"/>
    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:id="@+id/logprogressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.13"
        android:id="@+id/guideline13"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.87"
        android:id="@+id/guideline14"/>
    <androidx.constraintlayout.widget.Guideline
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.2"
        android:id="@+id/guideline15"/>
</androidx.constraintlayout.widget.ConstraintLayout>