<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <Button
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:fontFamily="@font/fredoka_fonts"
                android:background="@drawable/butttonstyle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view10"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:id="@+id/btnsetsubmit"
                app:layout_constraintHorizontal_bias="0.504"
                android:layout_marginTop="56dp"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:id="@+id/view"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <View
                android:layout_width="80dp"
                android:layout_height="6dp"
                android:background="@drawable/shadovfon"
                android:id="@+id/view7"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <View
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/loginedittext1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/view27"
                app:layout_constraintHorizontal_bias="0.495"
                android:layout_marginTop="64dp"/>
        <View
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/loginedittext1"
                android:id="@+id/view8"
                app:layout_constraintTop_toBottomOf="@+id/view27"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="@+id/view27"/>
        <View
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@drawable/loginedittext1"
                android:id="@+id/view10"
                app:layout_constraintTop_toBottomOf="@+id/view8"
                android:layout_marginTop="40dp"
                app:layout_constraintStart_toStartOf="@+id/view8"
                app:layout_constraintEnd_toEndOf="@+id/view8"/>
        <View
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:id="@+id/view28"
                app:layout_constraintTop_toBottomOf="@+id/btnsetsubmit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
        <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:maxLength="28"
                android:textSize="20sp"
                android:background="@null"
                app:fontFamily="@font/fredoka_fonts"
                android:id="@+id/ediserpass1"
                app:layout_constraintStart_toStartOf="@+id/view27"
                app:layout_constraintEnd_toEndOf="@+id/view27"
                app:layout_constraintBottom_toBottomOf="@+id/view27"
                app:layout_constraintTop_toTopOf="@+id/view27"
                tools:ignore="Autofill,LabelFor"/>
        <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="20sp"
                android:background="@null"
                android:maxLength="28"
                app:fontFamily="@font/fredoka_fonts"
                android:id="@+id/ediserpass2"
                tools:ignore="Autofill,LabelFor"
                app:layout_constraintStart_toStartOf="@+id/view8"
                app:layout_constraintTop_toTopOf="@+id/view8"
                app:layout_constraintBottom_toBottomOf="@+id/view8"
                app:layout_constraintEnd_toEndOf="@+id/view8"/>
        <EditText
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="20sp"
                android:id="@+id/ediserpass3"
                tools:ignore="Autofill,LabelFor"
                app:fontFamily="@font/fredoka_fonts"
                android:background="@null"
                android:maxLength="28"
                app:layout_constraintStart_toStartOf="@+id/view10"
                app:layout_constraintEnd_toEndOf="@+id/view10"
                app:layout_constraintBottom_toBottomOf="@+id/view10"
                app:layout_constraintTop_toTopOf="@+id/view10"/>
        <TextView
                android:text="@string/current_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/fredoka_fonts"
                android:id="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/view27"
                app:layout_constraintBottom_toTopOf="@+id/view27"
                android:layout_marginStart="4dp"/>
        <TextView
                android:text="@string/new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/fredoka_fonts"
                android:id="@+id/textView6"
                app:layout_constraintBottom_toTopOf="@+id/view8"
                app:layout_constraintStart_toStartOf="@+id/textView5"/>
        <TextView
                android:text="@string/re_enter_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/fredoka_fonts"
                android:id="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintBottom_toTopOf="@+id/view10"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/wallet"
                android:id="@+id/imageView11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view"
                android:layout_marginTop="48dp"
                app:layout_constraintHorizontal_bias="0.513"/>
        <TextView
                android:text="@string/enter_new_password_for_your_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fontFamily="@font/fredoka_fonts"
                android:id="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView11"
                android:layout_marginTop="32dp"
                app:layout_constraintHorizontal_bias="0.497"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>